--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-emoji",
+  "name": "emoji-vue",
   "version": "0.1.0",
   "description": "Add emojis to your vuejs project",
   "author": "Mikhail Kuznetcov <michail.kuznetsov@gmail.com>",
