add root index.js file and rearrange files

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Add emojis to your vuejs project",
   "author": "Mikhail Kuznetcov <michail.kuznetsov@gmail.com>",
   "private": false,
+  "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
