--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "3.0.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
